install/kubernetes/deploy-kfserving.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubeflow-dashboard-kfserving
  namespace: infra
  labels:
    app: kubeflow-dashboard-kfserving
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: kubeflow-dashboard-kfserving
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-dashboard-kfserving
  namespace: infra
  labels:
    app: kubeflow-dashboard-kfserving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeflow-dashboard-kfserving
  template:
    metadata:
      name: kubeflow-dashboard-kfserving
      labels:
        app: kubeflow-dashboard-kfserving
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubeflow-dashboard
                operator: In
                values:
                - "true"
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: kubeflow-dashboard-config
          configMap:
            name: kubeflow-dashboard-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
              - key: config.py
                path: config.py
        - name: kubernetes-config
          configMap:
            name: kubernetes-config
        - name: kubeflow-global
          persistentVolumeClaim:
            claimName: kubeflow-global-pvc
        - name: infra-kubeflow
          hostPath:
            path: /data/k8s/kubeflow/
      # hostNetwork: true   # 使用主机网络，要保障本机l5可用
      hostAliases:
      - ip: "10.123.119.83"
        hostnames:
        - "login.oa.com"
      - ip: "10.14.83.153"
        hostnames:
        - "passport.oa.com"
      - ip: "10.101.140.98"
        hostnames:
        - "cls-g9v4gmm0.ccs.tencent-cloud.com"

      imagePullSecrets:
      - name: csig-hubsecret
      serviceAccount: kubeflow-dashboard
      containers:
        - name: kubeflow-dashboard-kfserving
          image: csighub.tencentyun.com/tme-kubeflow/kubeflow-dashboard-kfserving:2020.09.01.5
          imagePullPolicy: Always  # IfNotPresent
          command: ["bash","/entrypoint.sh"]    # 如果修改了entrypoint要使用命令执行
#          command: ["sleep","300000"]
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: kubernetes-config
              mountPath: /home/myapp/kubeconfig
            - name: tz-config
              mountPath: /etc/localtime
            - name: kubeflow-global
              mountPath: /pvc
            - name: infra-kubeflow
              mountPath: /data/k8s/kubeflow/
#            - name: infra-ceph
#              mountPath: /mnt/ceph_fuse/

          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 10
              memory: 10Gi
            requests:
              cpu: 1
              memory: 1Gi
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 100
            periodSeconds: 60
            timeoutSeconds: 10
          # readinessProbe:
          #   failureThreshold: 2
          #   httpGet:
          #     path: /health
          #     port: http
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   timeoutSeconds: 5
